--- a/cryptography_cipher.ipynb
+++ b/cryptography_cipher.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "7865dcdf",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "9235c924",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "96fa7cc1",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "d11d2852",
    "metadata": {},
    "outputs": [
@@ -122,14 +122,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "p: 1483\n",
-      "q: 2671\n",
-      "n: 3961093\n",
-      "phi(n): 3956940\n",
-      "Public Key: 3445127\n",
-      "Private Key: 1871783\n",
+      "p: 3257\n",
+      "q: 3697\n",
+      "n: 12041129\n",
+      "phi(n): 12034176\n",
+      "Public Key: 3349039\n",
+      "Private Key: 503119\n",
       "Original Message: Hello World\n",
-      "Encrypted message: [27849, 2529615, 2898985, 2898985, 162960, 3824081, 1220253, 162960, 971440, 2898985, 2495533]\n",
+      "Encrypted message: [7139005, 2754999, 5659999, 5659999, 5926134, 7324535, 8626760, 5926134, 10173683, 5659999, 5059003]\n",
       "Decrypted Message: Hello World\n"
      ]
     }
@@ -189,8 +189,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "17217b68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prime number 1: 7\n",
+      "Prime number 2: 5\n",
+      "Private key 1: 3\n",
+      "Private key 2: 4\n",
+      "1 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Prime numbers\n",
+    "q = int(input(\"Prime number 1: \"))\n",
+    "\n",
+    "p = int(input(\"Prime number 2: \"))\n",
+    "\n",
+    "\n",
+    "# Private keys for both parties\n",
+    "private_key_1 = int(input(\"Private key 1: \"))\n",
+    "\n",
+    "private_key_2 = int(input(\"Private key 2: \"))\n",
+    "\n",
+    "\n",
+    "# Compute Public keys\n",
+    "public_key_1 = p**private_key_1 % q\n",
+    "\n",
+    "public_key_2 = p**private_key_2 % q\n",
+    "\n",
+    "\n",
+    "# Compute same keys\n",
+    "key_1 = public_key_2**private_key_1 % q\n",
+    "\n",
+    "key_2 = public_key_2**private_key_1 % q\n",
+    "\n",
+    "print(key_1, key_2)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2a2c668",
    "metadata": {},
    "outputs": [],
    "source": []
